Reordered and fixed CYA

--- a/app/views/lawful-development-certificate/v1/appeal-details/proposed-usage.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/proposed-usage.html
@@ -2,9 +2,9 @@
 
 {% block questions %}
   {{ govukTextarea({
-    name: 'appeal-details',
-    id: 'appeal-details',
-    value: data['appeal-details'],
+    name: 'proposed-usage',
+    id: 'proposed-usage',
+    value: data['proposed-usage'],
     rows: '5',
     label: {
       html: 'What&rsquo;s the proposed use, operation or activity as outlined in your application?',
