--- a/app/views/lawful-development-certificate/v1/appeal-details/proposal-started.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/proposal-started.html
@@ -2,8 +2,8 @@
 
 {% block questions %}
   {{ govukRadios({
-    idPrefix: 'proposal',
-    name: 'proposal',
+    idPrefix: 'proposal-started',
+    name: 'proposal-started',
     fieldset: {
       legend: {
         html: 'In the case of a proposal, had it been started before the application to the local planning authority was made?',
@@ -15,12 +15,12 @@
       {
         html: 'Yes',
         value: 'Yes',
-        checked: checked('proposal','Yes')
+        checked: checked('proposal-started','Yes')
       },
       {
         html: 'No',
         value: 'No',
-        checked: checked('proposal','No')
+        checked: checked('proposal-started','No')
       }
     ]
   }) }}
