Added CYA links to index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,8 @@
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/">Before you start</a></li>
+                      <li><a href="/lawful-development-certificate/v{{version}}/before-you-start/cya">Before you start: Check your answers</a></li>
+                      <li><a href="/lawful-development-certificate/v{{version}}/cya/">Check your answers</a></li>
                     </ul>
                   </div>
                   {# /VERSION 1 #}
