--- a/app/views/lawful-development-certificate/v1/site-details/address.html
+++ b/app/views/lawful-development-certificate/v1/site-details/address.html
@@ -9,6 +9,8 @@
     }
   }) %}
 
+    <p class="govuk-hint">This should match the address on your application to the local planning authority.</p>
+
     {{ govukInput({
       id: 'address-line-1',
       name: 'address-line-1',
@@ -40,16 +42,48 @@
       autocomplete: 'address-level2'
     }) }}
 
-    {{ govukInput({
-      id: 'address-postcode',
-      name: 'address-postcode',
-      value: data['address-postcode'],
-      classes: 'govuk-input--width-10',
-      label: {
-        html: 'Postcode'
-      },
-      autocomplete: 'postal-code'
-    }) }}
+    {% if data['grid'] == 'true' %}
+      {{ govukInput({
+        id: 'address-eastings',
+        name: 'address-eastings',
+        value: data['address-eastings'],
+        classes: 'govuk-input--width-10',
+        label: {
+          html: 'Eastings (optional)'
+        },
+        hint: {
+          html: 'For example, &lsquo;529090&rsquo;'
+        }
+      }) }}
+
+      {{ govukInput({
+        id: 'address-northings',
+        name: 'address-northings',
+        value: data['address-northings'],
+        classes: 'govuk-input--width-10',
+        label: {
+          html: 'Northings (optional)'
+        },
+        hint: {
+          html: 'For example, &lsquo;179645&rsquo;'
+        }
+      }) }}
+
+      <p class="govuk-!-margin-bottom-7"><a class="govuk-link--no-visited-state" href="?grid=false">The site does  have a postcode</a></p>
+    {% else %}
+      {{ govukInput({
+        id: 'address-postcode',
+        name: 'address-postcode',
+        value: data['address-postcode'],
+        classes: 'govuk-input--width-10',
+        label: {
+          html: 'Postcode'
+        },
+        autocomplete: 'postal-code'
+      }) }}
+
+      <p class="govuk-!-margin-bottom-7"><a class="govuk-link--no-visited-state" href="?grid=true">The site does not have a postcode</a></p>
+    {% endif %}
 
   {% endcall %}
 {% endblock %}
