--- a/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
+++ b/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
@@ -44,18 +44,24 @@
       spellcheck: false
     }) }}
 
-    {{ govukInput({
-      id: 'agent-email',
-      name: 'agent-email',
-      value: data['agent-email'],
-      classes: 'govuk-!-width-three-quarters',
-      label: {
-        html: 'Email address'
-      },
-      type: 'email',
-      autocomplete: 'email',
-      spellcheck: false
-    }) }}
+    {% if data['save-email'] %}
+      {{ govukInsetText({
+        html: 'This is the email you gave us for this appeal: '+data['save-email'] or 'liz@palace.com'
+      }) }}
+    {% else %}
+      {{ govukInput({
+        id: 'agent-email',
+        name: 'agent-email',
+        value: data['agent-email'],
+        classes: 'govuk-!-width-three-quarters',
+        label: {
+          html: 'Email address'
+        },
+        type: 'email',
+        autocomplete: 'email',
+        spellcheck: false
+      }) }}
+    {% endif %}
 
   {% endcall %}
 {% endblock %}
