--- a/app/views/lawful-development-certificate/v1/contact-details/appelant-name.html
+++ b/app/views/lawful-development-certificate/v1/contact-details/appelant-name.html
@@ -47,7 +47,7 @@
     {% if data['appelant-check'] != 'No' %}
       {% if data['save-email'] %}
         {{ govukInsetText({
-          html: 'This is the email you gave us for this appeal: '+data['save-email'] or 'liz@palace.com'
+          html: 'You have confirmed your email for this appeal:<br>'+data['save-email'] or 'liz@palace.com'
         }) }}
       {% else %}
         {{ govukInput({
