--- a/app/views/lawful-development-certificate/v1/save-and-return/return-email.html
+++ b/app/views/lawful-development-certificate/v1/save-and-return/return-email.html
@@ -34,7 +34,7 @@
 
     <ol class="govuk-list govuk-list--number">
       <li>
-        Go to the link to receive a code: <a href="{{ data['last-page'] }}" class="govuk-link">www.gov.uk/appeal-a-planning-decision/continue/0722bb4b-6650-4046-8a9f-0ad0efdd3b2f</a>
+        Go to the link to receive a code: <a href="{{ data['last-page'] or '../contact-details/' }}" class="govuk-link">www.gov.uk/appeal-a-planning-decision/continue/0722bb4b-6650-4046-8a9f-0ad0efdd3b2f</a>
       </li>
 
       <li>
