--- a/app/views/lawful-development-certificate/v1/before-you-start/index.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/index.html
@@ -1,11 +1,16 @@
 {% extends "layout.html" %}
 
-{# {% block beforeContent %}
-  {{ govukBackLink({
-    html: 'Back',
-    href: 'javascript:history.back()'
-  }) }}
-{% endblock %} #}
+{% block beforeContent %}
+	{{ govukPhaseBanner({
+		tag: { text: 'Beta' },
+		html: 'This is a new service &ndash; your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
+	}) }}
+
+	{{ govukBackLink({
+		html: 'Back',
+		href: '#0'
+	}) }}
+{% endblock %}
 
 {% block content %}
   <div class="govuk-grid-row">
