--- a/app/views/lawful-development-certificate/v1/before-you-start/section.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/section.html
@@ -1,10 +1,15 @@
 {% extends "layout.html" %}
 
 {% block beforeContent %}
-  {{ govukBackLink({
-    html: 'Back',
-    href: 'javascript:history.back()'
-  }) }}
+	{{ govukPhaseBanner({
+		tag: { text: 'Beta' },
+		html: 'This is a new service &ndash; your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
+	}) }}
+	
+	{{ govukBackLink({
+		html: 'Back',
+		href: 'javascript:history.back()'
+	}) }}
 {% endblock %}
 
 {% block content %}
