Missing beta banner

--- a/app/views/lawful-development-certificate/v1/before-you-start/cya.html
+++ b/app/views/lawful-development-certificate/v1/before-you-start/cya.html
@@ -1,16 +1,16 @@
 {% extends "layout.html" %}
 
-{# {% block beforeContent %}
+{% block beforeContent %}
 	{{ govukPhaseBanner({
 		tag: { text: 'Beta' },
 		html: 'This is a new service &ndash; your <a class="govuk-link" href="#feedback">feedback</a> will help us to improve it.'
 	}) }}
-	
+
 	{{ govukBackLink({
 		html: 'Back',
 		href: 'javascript:history.back()'
 	}) }}
-{% endblock %} #}
+{% endblock %}
 
 {% set applicationDate = (data['application-date-day'] or '1') +' '+ (data['application-date-month'] | formatMonth or 'July') +' '+ (data['application-date-year'] or '2022') %}
 {% set decisionDate = (data['decision-date-day'] or '1') +' '+ (data['decision-date-month'] | formatMonth or 'August') +' '+ (data['decision-date-year'] or '2022') %}
