--- a/app/views/lawful-development-certificate/v1/site-details/address.html
+++ b/app/views/lawful-development-certificate/v1/site-details/address.html
@@ -9,7 +9,7 @@
     }
   }) %}
 
-    <p class="govuk-hint">This should match the address on your application to the local planning authority.</p>
+    <p class="govuk-hint">This should match the address on the application to the local planning authority.</p>
 
     {{ govukInput({
       id: 'address-line-1',
