--- a/app/views/lawful-development-certificate/v1/contact-details/application-check.html
+++ b/app/views/lawful-development-certificate/v1/contact-details/application-check.html
@@ -14,9 +14,14 @@
     },
     items: [
       {
-        html: 'An individual',
-        value: 'An individual',
-        checked: checked('application-check','An individual')
+        html: 'You',
+        value: 'You',
+        checked: checked('application-check','You')
+      },
+      {
+        html: 'Another individual',
+        value: 'Another individual',
+        checked: checked('application-check','Another individual')
       },
       {
         html: 'A company',
