--- a/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
+++ b/app/views/lawful-development-certificate/v1/contact-details/agent-details.html
@@ -7,7 +7,7 @@
       name: 'agency-name',
       value: data['agency-name'],
       label: {
-        html: 'Agency name'
+        html: 'Company name'
       }
     }) }}
   {% endset -%}
@@ -16,7 +16,7 @@
     name: 'agency-check',
     fieldset: {
       legend: {
-        html: 'Do you work for an agency?',
+        html: 'Do you work for another company acting on behalf of the applicant?',
         classes: 'govuk-fieldset__legend--l',
         isPageHeading: true
       }
