Fixed save and return link on CYA

--- a/app/views/lawful-development-certificate/v1/cya/index.html
+++ b/app/views/lawful-development-certificate/v1/cya/index.html
@@ -477,7 +477,7 @@
           href: 'confirmation'
         }) }}
 
-        <p><a href="#0" class="govuk-link--no-visited-state">Save and complete later</a></p>
+        <p><a href="/{{location}}save-and-return/?last-page={{currentURL}}" class="govuk-link--no-visited-state">Save and complete later</a></p>
       </div>
 
     </div>
