Content tweak for people who might not have a decision letter

--- a/app/views/lawful-development-certificate/v1/appeal-details/lpa-reference.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/lpa-reference.html
@@ -12,7 +12,7 @@
       isPageHeading: true
     },
     hint: {
-      html: 'You can find this on the decision letter from your local planning department'
+      html: 'You can find this on the letter confirming your application from your local planning department'
     }
   }) }}
 {% endblock %}
