Update to version 8 of enforcement journey

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -176,6 +176,21 @@
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
                       classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for build"
+                    }) }}
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      Version 8 - updated contact and company names
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li><a href="/enforcement/v8/save-and-return/what-is-your-email">What is your email address?</a></li>
+                      <li><a href="/enforcement/v8/skip/appeal-start">Before you continue</a></li>
+                      <li><a href="/enforcement/v8/skip/tasks">Completed task list</a></li>
+                    </ul>
+                  </div>
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    {{ govukTag({
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
                       text: "WIP"
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
