Update to contacts and company names to listed building enforcements

--- a/app/views/enforcement-listed-building/v1/task-list.html
+++ b/app/views/enforcement-listed-building/v1/task-list.html
@@ -72,7 +72,7 @@
           <!-- contact details -->
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              <a href="named-on-notice/named-on-notice" class="govuk-link--no-visited-state">
+              <a href="contact-details/" class="govuk-link--no-visited-state">
                 Tell us who is on the enforcement notice
               </a>
             </span>
