--- a/app/views/lawful-development-certificate/v1/save-and-return/confirmation-email.html
+++ b/app/views/lawful-development-certificate/v1/save-and-return/confirmation-email.html
@@ -24,7 +24,7 @@
     </p>
 
     <p class="govuk-body">
-      You must confirm your email address so we can contact you if we have any questions about your appeal.
+      You must confirm your email address before we can save your appeal.
     </p>
 
     <p class="govuk-body">
