--- a/app/views/lawful-development-certificate/v1/save-and-return/return-email.html
+++ b/app/views/lawful-development-certificate/v1/save-and-return/return-email.html
@@ -25,22 +25,16 @@
 
     <p class="govuk-body">
       <!-- This link will expire after 6 weeks. -->
-      You have until 3 April 2022 to submit your appeal.
+      You have until 3 November 2022 to submit your appeal.
     </p>
 
     <h2 class="govuk-heading-m">
       How to get back to your appeal
     </h2>
 
-    <ol class="govuk-list govuk-list--number">
-      <li>
-        Go to the link to receive a code: <a href="{{ data['last-page'] or '../contact-details/' }}" class="govuk-link">www.gov.uk/appeal-a-planning-decision/continue/0722bb4b-6650-4046-8a9f-0ad0efdd3b2f</a>
-      </li>
-
-      <li>
-        Enter the code we send in an email to you.
-      </li>
-    </ol>
+    <p class="govuk-body">
+      Go to the link to return to your appeal: <a href="{{ data['last-page'] or '../contact-details/' }}" class="govuk-link">www.gov.uk/appeal-a-planning-decision/continue/0722bb4b-6650-4046-8a9f-0ad0efdd3b2f</a>
+    </p>
 
     <p class="govuk-body">
       From The Planning Inspectorate
