Content and removed notes

--- a/app/views/lawful-development-certificate/v1/appeal-details/lpa-reference.html
+++ b/app/views/lawful-development-certificate/v1/appeal-details/lpa-reference.html
@@ -12,7 +12,7 @@
       isPageHeading: true
     },
     hint: {
-      html: 'You can find this on the letter confirming your application from your local planning department'
+      html: 'You can find this on any correspondence from the local planning authority, for example the letter confirming your application'
     }
   }) }}
 {% endblock %}
